--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,19 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.7",
+    "@types/moment": "^2.13.0",
+    "@types/mongodb": "^3.5.26",
     "@types/node": "^14.6.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "json-loader": "^0.5.7",
+    "moment": "^2.27.0",
+    "mongodb": "^3.6.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
