--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/moment": "^2.13.0",
     "@types/mongodb": "^3.5.26",
     "@types/node": "^14.6.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
